--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "email": "contact@icjoseph.com",
     "url": "http://icjoseph.com"
   },
+  "repository": "github:icyJoseph/useOptimizedResize",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development",
     "transpile": "babel src -d dist --copy-files",
     "prepublishOnly": "npm run transpile"
