--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "use-optimized-resize",
-  "version": "1.0.0",
+  "version": "1.0.2",
+  "homepage": "https://godly-sheep.surge.sh",
   "description": "useLayoutEffect for window resize",
   "author": {
     "name": "Joseph Chamochumbi",
